; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm/commpage/extr_commpage.c_commpage_set_spin_count.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm/commpage/extr_commpage.c_commpage_set_spin_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@commPagePtr = common dso_local global i64 0, align 8
@_COMM_PAGE_SPIN_COUNT = common dso_local global i64 0, align 8
@_COMM_PAGE_RW_OFFSET = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @commpage_set_spin_count(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp eq i32 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %6

6:                                                ; preds = %5, %1
  %7 = load i64, i64* @commPagePtr, align 8
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %6
  br label %16

10:                                               ; preds = %6
  %11 = load i32, i32* %2, align 4
  %12 = load i64, i64* @_COMM_PAGE_SPIN_COUNT, align 8
  %13 = load i64, i64* @_COMM_PAGE_RW_OFFSET, align 8
  %14 = add nsw i64 %12, %13
  %15 = inttoptr i64 %14 to i32*
  store i32 %11, i32* %15, align 4
  br label %16

16:                                               ; preds = %10, %9
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
